# matrix

./: LICENSE  README.md  pyproject.toml
src/matrix/: __main__.py  assistants.py  cli.py  config.py  prompts.py  providers.py
