[tool.poetry]
name = "matrix"
version = "0.1.0"
description = "Prompt manager"
authors = ["Amitosh Swain Mahapatra <amitosh@recrsn.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
openai = "^1.12.0"
click = "^8.1.7"
keyring = "^24.3.0"
httpx = "^0.26.0"
platformdirs = "^4.2.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
